2007-09-05  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_set_delays):
	new function
	dodelay: variable removed

	* avatarsay.c (keyhandler): new function

	* avatar.c (avt_analyze_event):
	don't check for the Esc key or space key
	these have to be handled externally

	* akfavatar.h, avatar.c (avt_reset_status): removed
	(avt_set_status): new function

	* avatar.pas renamed to akfavatar.pas

	* akfavatar.pas:
	no need to link to SDL or pthread directly

	* akfavatar.h, avatar.c (avt_register_keyhandler):
	new function

	* avatar.c (avt_analyze_event):
	support for external keyhandler
	
	* akfavatar.pas:
	support for writing to TextAttr
	support for KeyPressed, ReadKey
	support for CheckBreak
	support for CheckEsc
	dummys for CheckEof, CheckSnow, DirectVideo
	dummy for Sound

2007-08-28  Andreas K. Foerster  <info@akfoerster.de>

	* version 0.13.1 released

	* switching to a 3 number version scheme with 2 numbers in the so-name

	* major rewrite of character and color handling

	* joined header files together to akfavatar.h

	* akfavatar.h, avatar.c (avt_clear_screen):
	new function

	* akfavatar.h, avatar.c (avt_clear_eol):
	new function

	* akfavatar.h, avatar.c 
	(avt_set_text_color, avt_set_text_background_color):
	new functions

	* avatar.pas:
	(PlaySoundFile): renamed from PlayAudioFile
	(WaitSoundEnd): renamed from WaitAudioEnd
	(NoSound): renamed from StopAudio
	(Sound): added as dummy function, full support planned

	* avatar.pas (TextColor, TextBackground, ClrEol):
	(NormVideo, HighVideo, LowVideo):
	new functions
	(TextAttr, WindMin, WindMax):
	new variables (just for reading!)

	* avatar.c (avt_wait_key):
	fix: message gets cleared again

	* renamed library to libakfavatar

	* avatar.pas (Initialize):
	don't close input/output (fixes problem under Windows)

	* avatar.c (avt_new_line, avt_say, avt_ask):
	a new line doesn't enforce a new page yet, only actually trying
	to print something outside the area does
	